@@ -1,6 +1,7 @@
 package com.learning.progress.service.impl;
 
 import com.learning.progress.common.Const;
+import com.learning.progress.common.QuestionType;
 import com.learning.progress.dto.challenge.section.DataItem;
 import com.learning.progress.dto.challenge.section.QuestionContent;
 import com.learning.progress.dto.challenge.section.QuestionDto;
@@ -10,16 +11,32 @@ import com.learning.progress.exception.ApiException;
 import com.learning.progress.mapper.QuestionMapper;
 import com.learning.progress.repository.ChallengeSectionRepository;
 import com.learning.progress.repository.QuestionRepository;
+import com.learning.progress.service.validator.QuestionValidator;
 import com.learning.progress.util.JsonUtil;
+import com.learning.progress.util.JwtUtil;
+import com.learning.progress.util.TraceUtil;
+import jakarta.validation.ConstraintViolation;
+import jakarta.validation.Validator;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.BeanUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
-import java.util.List;
-import java.util.Map;
+import java.math.BigDecimal;
+import java.time.LocalDateTime;
+import java.time.OffsetDateTime;
+import java.util.*;
+import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 
 @Service
+@Slf4j
 public class QuestionServiceImpl implements com.learning.progress.service.QuestionService {
+
+    @Autowired
+    private QuestionValidator questionValidator;
 
     @Autowired
     private QuestionRepository questionRepository;
@@ -30,47 +47,268 @@ public class QuestionServiceImpl implements com.learning.progress.service.Questi
     @Autowired
     private QuestionMapper questionMapper;
 
+    @Autowired
+    private JwtUtil jwtUtil;
+
+    @Autowired
+    private Validator validator;
+
     @Override
-    public List<QuestionDto> createQuestion(List<QuestionDto> dtos, Long sectionId) {
+    @Transactional
+    public List<QuestionDto> bulkQuestion(List<QuestionDto> dtos, Long sectionId) {
+        String traceId = TraceUtil.getTraceId();
+
+        // Bước 1: Validate Section
         ChallengeSection section = sectionRepository.findByIdAndDeletedAtIsNull(sectionId)
                 .orElseThrow(() -> {
+                    log.error("[{}] Section not found: {}", traceId, sectionId);
                     return new ApiException(Const.SECTION.NOT_FOUND, HttpStatus.NOT_FOUND.value());
                 });
-        List<Question> createdQuestions = dtos.stream()
-                .map(dto -> {
-                    // Validate DTO
-                    validateQuestionDto(dto);
-                    // Create Question entity
-                    Map<String, Object> questionContentJson = JsonUtil.objectToMap(dto.getContent());
 
-                    Question question = questionMapper.toQuestionDtos(dto);
-                    question.setQuestionContentJson(questionContentJson);
-                    question.setSection(section);
-                    // Map QuestionContent
-                    return question;
+        // Bước 2: Load Existing Active Questions
+        List<Question> existingActiveQuestions = questionRepository
+                .findBySectionIdAndDeletedAtIsNullOrderByOrderNumberAsc(sectionId);
+        Set<Long> existingActiveIds = existingActiveQuestions.stream()
+                .map(Question::getId)
+                .collect(Collectors.toSet());
 
-                })
-                .toList();
+        // Bước 3: Phân loại Requests
+        List<QuestionDto> deleteRequests = dtos.stream()
+                .filter(QuestionDto::isToBeDeleted)
+                .collect(Collectors.toList());
+        List<QuestionDto> nonDeletedRequests = dtos.stream()
+                .filter(dto -> !dto.isToBeDeleted())
+                .collect(Collectors.toList());
 
-        List<Question> savedQuestions = questionRepository.saveAll(createdQuestions);
+        // Bước 4: Validate DELETE requests
+        for (QuestionDto deleteDto : deleteRequests) {
+            Set<ConstraintViolation<QuestionDto>> violations = validator.validate(deleteDto, QuestionDto.Deleted.class);
+            if (!violations.isEmpty()) {
+                String errorMsg = violations.stream().map(ConstraintViolation::getMessage).collect(Collectors.joining(", "));
+                log.error("[{}] Validation error for delete request: {}", traceId, errorMsg);
+                throw new ApiException(errorMsg, HttpStatus.BAD_REQUEST.value());
+            }
 
-        return questionMapper.toQuestionDtos(savedQuestions);
+            Long deleteId = deleteDto.getId();
+            if (deleteId == null || !existingActiveIds.contains(deleteId)) {
+                log.error("[{}] Invalid question ID for deletion: {}", traceId, deleteId);
+                throw new ApiException("Question ID to delete does not exist: " + deleteId, HttpStatus.BAD_REQUEST.value());
+            }
+        }
+
+        // Bước 5: Validate EXISTING IDs - Strict Matching
+        Set<Long> requestExistingIds = nonDeletedRequests.stream()
+                .filter(dto -> dto.getId() != null)
+                .map(QuestionDto::getId)
+                .collect(Collectors.toSet());
+
+        Set<Long> requestDeleteIds = deleteRequests.stream()
+                .map(QuestionDto::getId)
+                .filter(Objects::nonNull)
+                .collect(Collectors.toSet());
+
+        // Check 1: All request IDs must exist
+        Set<Long> invalidRequestIds = new HashSet<>();
+        invalidRequestIds.addAll(requestExistingIds.stream()
+                .filter(id -> !existingActiveIds.contains(id))
+                .collect(Collectors.toSet()));
+        invalidRequestIds.addAll(requestDeleteIds.stream()
+                .filter(id -> !existingActiveIds.contains(id))
+                .collect(Collectors.toSet()));
+
+        if (!invalidRequestIds.isEmpty()) {
+            log.error("[{}] Invalid question IDs: {}", traceId, invalidRequestIds);
+            throw new ApiException("Invalid question IDs: " + invalidRequestIds, HttpStatus.BAD_REQUEST.value());
+        }
+
+        // Check 2: All DB questions must be handled
+        Set<Long> handledIds = new HashSet<>();
+        handledIds.addAll(requestExistingIds);
+        handledIds.addAll(requestDeleteIds);
+
+        Set<Long> unhandledDbIds = existingActiveIds.stream()
+                .filter(id -> !handledIds.contains(id))
+                .collect(Collectors.toSet());
+
+        if (!unhandledDbIds.isEmpty()) {
+            log.error("[{}] Unhandled questions: {}", traceId, unhandledDbIds);
+            throw new ApiException(
+                    String.format("Questions not handled: %s. FE must include ALL active questions!", unhandledDbIds),
+                    HttpStatus.BAD_REQUEST.value()
+            );
+        }
+
+        // Check 3: Count consistency
+        int expectedNonDeletedCount = existingActiveQuestions.size() - requestDeleteIds.size();
+        int actualNonDeletedCount = nonDeletedRequests.stream()
+                .filter(dto -> dto.getId() != null)
+                .map(QuestionDto::getId)
+                .collect(Collectors.toSet())
+                .size();
+
+        if (actualNonDeletedCount != expectedNonDeletedCount) {
+            log.error("[{}] Non-deleted questions count mismatch! Expected: {}, Actual: {}", traceId,
+                    expectedNonDeletedCount, actualNonDeletedCount);
+            throw new ApiException(
+                    String.format("Non-deleted questions count mismatch! Expected: %d, Actual: %d",
+                            expectedNonDeletedCount, actualNonDeletedCount),
+                    HttpStatus.BAD_REQUEST.value()
+            );
+        }
+
+        // Bước 6: Bean Validation Non-Deleted
+        for (QuestionDto dto : nonDeletedRequests) {
+            Set<ConstraintViolation<QuestionDto>> violations = validator.validate(dto, QuestionDto.NotDeleted.class);
+            if (!violations.isEmpty()) {
+                String errorMsg = violations.stream().map(ConstraintViolation::getMessage).collect(Collectors.joining(", "));
+                log.error("[{}] Validation error for non-deleted request: {}", traceId, errorMsg);
+                throw new ApiException(errorMsg, HttpStatus.BAD_REQUEST.value());
+            }
+            questionValidator.validateQuestionDto(dto);
+        }
+
+        // Bước 7: Validate Order Numbers (sequential from 1)
+        Set<Integer> orderNumbers = nonDeletedRequests.stream()
+                .map(QuestionDto::getOrderNumber)
+                .filter(Objects::nonNull)
+                .collect(Collectors.toSet());
+
+        int nonDeletedSize = nonDeletedRequests.size();
+        Set<Integer> expectedOrders = IntStream.rangeClosed(1, nonDeletedSize).boxed().collect(Collectors.toSet());
+
+        if (orderNumbers.size() != nonDeletedSize || !orderNumbers.equals(expectedOrders)) {
+            log.error("[{}] Order numbers must be sequential from 1 to {}. Found: {}", traceId, nonDeletedSize, orderNumbers);
+            throw new ApiException(
+                    String.format("Order numbers must be sequential from 1 to %d. Found: %s", nonDeletedSize, orderNumbers),
+                    HttpStatus.BAD_REQUEST.value()
+            );
+        }
+
+        // Bước 8: Validate duplicate question text (case-insensitive)
+        Set<String> questionTextsLower = new HashSet<>();
+        for (QuestionDto dto : nonDeletedRequests) {
+            String text = dto.getQuestionText().trim().toLowerCase();
+            if (!questionTextsLower.add(text)) {
+                log.error("[{}] Duplicate question text: {}", traceId, dto.getQuestionText());
+                throw new ApiException(
+                        String.format("Duplicate question text: %s", dto.getQuestionText()),
+                        HttpStatus.BAD_REQUEST.value()
+                );
+            }
+        }
+
+        // Check duplicate with DB for new questions
+        for (QuestionDto dto : nonDeletedRequests) {
+            if (dto.getId() == null) {
+                String trimmedText = dto.getQuestionText().trim();
+                boolean exists = questionRepository.existsBySectionAndQuestionTextIgnoreCaseAndDeletedAtIsNull(section, trimmedText);
+                if (exists) {
+                    log.error("[{}] Question text already exists: {}", traceId, trimmedText);
+                    throw new ApiException(
+                            String.format("Question text '%s' already exists in this section", trimmedText),
+                            HttpStatus.BAD_REQUEST.value()
+                    );
+                }
+            }
+        }
+
+        // Bước 9: Process
+        OffsetDateTime now = OffsetDateTime.now();
+        List<QuestionDto> result = new ArrayList<>();
+
+        // Process DELETE
+        for (Long deleteId : requestDeleteIds) {
+            Question question = questionRepository.findById(deleteId)
+                    .filter(q -> q.getDeletedAt() == null)
+                    .orElseThrow(() -> {
+                        log.error("[{}] Question not found for deletion: {}", traceId, deleteId);
+                        return new ApiException("Question not found: " + deleteId, HttpStatus.NOT_FOUND.value());
+                    });
+            question.setDeletedBy(jwtUtil.extractEmailPrefixFromCurrentRequest());
+            question.setDeletedAt(now);
+            questionRepository.save(question);
+        }
+
+        // Process UPDATE existing
+        List<QuestionDto> updateRequests = nonDeletedRequests.stream()
+                .filter(dto -> dto.getId() != null)
+                .collect(Collectors.toList());
+
+        for (QuestionDto dto : updateRequests) {
+            Question question = questionRepository.findById(dto.getId())
+                    .filter(q -> q.getDeletedAt() == null)
+                    .orElseThrow(() -> {
+                        log.error("[{}] Question not found: {}", traceId, dto.getId());
+                        return new ApiException("Question not found: " + dto.getId(), HttpStatus.NOT_FOUND.value());
+                    });
+
+            question.setQuestionText(dto.getQuestionText());
+            question.setScore(BigDecimal.valueOf(dto.getScore()));
+            question.setQuestionType(QuestionType.valueOf(dto.getQuestionType()));
+            question.setOrderNumber(dto.getOrderNumber());
+            question.setQuestionContentJson(JsonUtil.objectToMap(dto.getContent()));
+            result.add(questionMapper.toQuestionDto(questionRepository.save(question)));
+        }
+
+        // Process CREATE new
+        List<QuestionDto> newRequests = nonDeletedRequests.stream()
+                .filter(dto -> dto.getId() == null)
+                .collect(Collectors.toList());
+
+        for (QuestionDto dto : newRequests) {
+            Question newQuestion = new Question();
+            newQuestion.setSection(section);
+            newQuestion.setQuestionText(dto.getQuestionText());
+            newQuestion.setScore(BigDecimal.valueOf(dto.getScore()));
+            newQuestion.setQuestionType(QuestionType.valueOf(dto.getQuestionType()));
+            newQuestion.setOrderNumber(dto.getOrderNumber());
+            newQuestion.setQuestionContentJson(JsonUtil.objectToMap(dto.getContent()));
+            result.add(questionMapper.toQuestionDto(questionRepository.save(newQuestion)));
+        }
+
+        return result;
     }
 
     @Override
     public QuestionDto getQuestion(Long id) {
-        throw new UnsupportedOperationException("getQuestion not implemented yet");
+        Question question = questionRepository.findByIdAndDeletedAtIsNull(id)
+                .orElseThrow(() -> new ApiException(Const.QUESTION.NOT_FOUND, HttpStatus.NOT_FOUND.value()));
+        return questionMapper.toQuestionDto(question);
     }
 
     @Override
-    public QuestionDto updateQuestion(Long id, QuestionDto dto) {
-        throw new UnsupportedOperationException("getQuestion not implemented yet");
+    @Transactional
+    public void deleteQuestions(List<Long> ids) {
+        String traceId = TraceUtil.getTraceId();
+        log.info("[{}] Deleting questions with IDs: {}", traceId, ids);
+
+        if (ids == null || ids.isEmpty()) {
+            log.error("[{}] Question IDs list is empty", traceId);
+            throw new ApiException(Const.QUESTION.IDS_REQUIRED, HttpStatus.BAD_REQUEST.value());
+        }
+
+        // Lấy danh sách các câu hỏi hợp lệ (chưa bị xóa)
+        List<Question> questions = questionRepository.findAllByIdInAndDeletedAtIsNull(ids);
+
+        if (questions.isEmpty()) {
+            log.error("[{}] No active questions found for IDs: {}", traceId, ids);
+            throw new ApiException(Const.QUESTION.NOT_FOUND, HttpStatus.NOT_FOUND.value());
+        }
+
+        // Cập nhật thông tin xóa mềm
+        String deletedBy = jwtUtil.extractEmailPrefixFromCurrentRequest();
+        OffsetDateTime now = OffsetDateTime.now();
+
+        questions.forEach(q -> {
+            q.setDeletedBy(deletedBy);
+            q.setDeletedAt(now);
+        });
+
+        questionRepository.saveAll(questions);
+
+        log.info("[{}] Successfully soft deleted {} questions", traceId, questions.size());
     }
 
-    @Override
-    public void deleteQuestion(Long id) {
-        throw new UnsupportedOperationException("getQuestion not implemented yet");
-    }
 
     @Override
     public List<QuestionDto> getQuestionsBySection(Long sectionId) {
@@ -84,28 +322,5 @@ public class QuestionServiceImpl implements com.learning.progress.service.Questi
         // Ánh xạ sang QuestionDto
         return questionMapper.toQuestionDtos(questions);
     }
-    private void validateQuestionDto(QuestionDto dto) {
-        if (dto == null) {
-            throw new ApiException("Question DTO cannot be null", HttpStatus.BAD_REQUEST.value());
-        }
-        if (dto.getQuestionText() == null || dto.getQuestionText().isEmpty()) {
-            throw new ApiException("Question text cannot be empty", HttpStatus.BAD_REQUEST.value());
-        }
-        if (dto.getScore() <= 0) {
-            throw new ApiException("Score must be positive", HttpStatus.BAD_REQUEST.value());
-        }
-        validateQuestionContent(dto.getContent());
-    }
 
-    private void validateQuestionContent(QuestionContent content) {
-        if (content == null || content.getData() == null || content.getData().isEmpty()) {
-            throw new ApiException("Question content cannot be empty", HttpStatus.BAD_REQUEST.value());
-        }
-        boolean hasCorrectAnswer = content.getData().stream()
-                .anyMatch(DataItem::isCorrect);
-        if (!hasCorrectAnswer) {
-            throw new ApiException("Multiple choice question must have at least one correct answer",
-                    HttpStatus.BAD_REQUEST.value());
-        }
-    }
 }
